# Legends

./: .cursorrules  .editorconfig  Cargo.toml  README.md  bitnice_node.long-type-10213400645779673595.txt  bitnice_node.long-type-13705944843439170385.txt
docs/: api-reference.md  architecture.md  bitcoin-pow-analysis.md  immediate-steps.md  mining-guide.md  polkadot-sdk-upgrade-completed.md  pow-implementation-plan.md  stage1-completion-summary.md  test-current-progress.md  update.md  upgrade-plan.md
node/: Cargo.toml  build.rs
node/res/: bitnice.json
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
runtime/: Cargo.toml  build.rs
runtime/src/: lib.rs
