[workspace]
resolver = "2"
members = [
	"node",
	"pallets/*",
	"runtime",
]

[workspace.package]
authors = ["health"]
edition = "2021"
repository = "https://github.com/health/Legends"
license = "GPL-3.0-only"
homepage = "https://github.com/health/Legends"

[workspace.lints.rust]
suspicious_double_ref_op = { level = "allow", priority = 2 }

[workspace.lints.clippy]
all = { level = "allow", priority = 0 }
correctness = { level = "warn", priority = 1 }
complexity = { level = "warn", priority = 1 }
if-same-then-else = { level = "allow", priority = 2 }
zero-prefixed-literal = { level = "allow", priority = 2 }
type_complexity = { level = "allow", priority = 2 }
nonminimal-bool = { level = "allow", priority = 2 }
borrowed-box = { level = "allow", priority = 2 }
too-many-arguments = { level = "allow", priority = 2 }
unnecessary_cast = { level = "allow", priority = 2 }
identity-op = { level = "allow", priority = 2 }
useless_conversion = { level = "allow", priority = 2 }

[workspace.dependencies]
# 外部依赖 - 使用与 polkadot-sdk 兼容的版本
parity-scale-codec = { version = "3.6.12", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }
serde = { version = "1.0.206", default-features = false, features = ["derive", "alloc"] }
clap = { version = "4.5.3" }
futures = { version = "0.3.30" }
jsonrpsee = { version = "0.24.3", features = ["server"] }
serde_json = { version = "1.0.128" }
thiserror = { version = "1.0.65" }
tokio = { version = "1.39.2" }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18" }

# Polkadot SDK 依赖
polkadot-sdk = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false }

# 额外需要的 substrate 依赖
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }

# 基础框架依赖 - 移除可能有问题的 benchmarking-cli
# frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }

# PoW 相关
sha2 = { version = "0.10", default-features = false }
primitive-types = { version = "0.13", default-features = false, features = ["scale-info"] }

# Local dependencies  
legends-runtime = { path = "runtime" }
pallet-template = { path = "pallets/template" }

# 版本强制解析以避免冲突
fixed-hash = { version = "0.8", default-features = false, features = ["scale-info"] }
uint = { version = "0.10", default-features = false }



[profile.release]
panic = "unwind"
