[workspace]
members = ["node", "runtime"]
resolver = "2"

[workspace.dependencies]
# Polkadot SDK
polkadot-sdk = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }

# Substrate 框架核心组件
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
frame-executive = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
frame-try-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }


# Substrate 原语
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
sp-consensus-pow = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
sp-genesis-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-consensus = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }

# Substrate 客户端
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sc-consensus-pow = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sc-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sc-rpc-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sc-keystore = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sc-client-db = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sc-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }

# Substrate 内置 Pallets
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }

# 通用依赖
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.10.0", default-features = false, features = [
    "derive",
] }
serde = { version = "1.0.196", default-features = false, features = [
    "derive",
    "alloc",
] }
serde_json = "1.0.113"
clap = { version = "4.4.18", features = ["derive"] }
futures = "0.3.30"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0.79"
thiserror = "1.0.56"
tempfile = "3.8"

# 挖矿和加密相关
sha2 = { version = "0.10.8", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
rand = { version = "0.8.5", default-features = false }

# 构建工具
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }

# 可选工具

# RPC 相关
jsonrpsee = { version = "0.20", features = ["server"] }

# 其他运行时原语
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
