[package]
name = "bitnice-runtime"
version = "0.1.0"
edition = "2021"
authors = ["differs"]
description = "BitNice Runtime - A Bitcoin-inspired blockchain runtime built with Polkadot SDK"
license = "GPL-3.0"

[dependencies]
# 编解码
codec = { workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = [
    "derive",
] }

# Substrate 原语
sp-api = { workspace = true, default-features = false }
sp-block-builder = { workspace = true, default-features = false }
sp-consensus-pow = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-genesis-builder = { workspace = true, default-features = false }
sp-inherents = { workspace = true, default-features = false }
sp-offchain = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-session = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-transaction-pool = { workspace = true, default-features = false }
sp-version = { workspace = true, default-features = false }

# Frame 核心组件
frame-executive = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
frame-system-benchmarking = { workspace = true, default-features = false, optional = true }
frame-system-rpc-runtime-api = { workspace = true, default-features = false }
frame-try-runtime = { workspace = true, default-features = false, optional = true }

# 基础 Pallets
pallet-balances = { workspace = true, default-features = false }
pallet-sudo = { workspace = true, default-features = false }
pallet-timestamp = { workspace = true, default-features = false }
pallet-transaction-payment = { workspace = true, default-features = false }
pallet-transaction-payment-rpc-runtime-api = { workspace = true, default-features = false }

# 基准测试
frame-benchmarking = { workspace = true, default-features = false, optional = true }

# 序列化（仅在 std 特性下使用）
serde = { workspace = true, default-features = false, features = [
    "derive",
    "alloc",
], optional = true }

# 加密和挖矿相关
sha2 = { workspace = true, default-features = false }
hex = { workspace = true, default-features = false, features = ["alloc"] }

[build-dependencies]
substrate-wasm-builder = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "serde/std",

    # Substrate 原语
    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-pow/std",
    "sp-core/std",
    "sp-genesis-builder/std",
    "sp-inherents/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-transaction-pool/std",
    "sp-version/std",

    # Frame 组件
    "frame-executive/std",
    "frame-support/std",
    "frame-system/std",
    "frame-system-rpc-runtime-api/std",
    "frame-try-runtime?/std",

    # Pallets
    "pallet-balances/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "pallet-transaction-payment-rpc-runtime-api/std",

    # 基准测试
    "frame-benchmarking?/std",
    "frame-system-benchmarking?/std",

    # 加密库
    "sha2/std",
    "hex/std",

    # 构建工具已在 build-dependencies 中处理
]

runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "frame-system-benchmarking/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-sudo/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]

try-runtime = [
    "frame-executive/try-runtime",
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "frame-try-runtime/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-sudo/try-runtime",
    "pallet-timestamp/try-runtime",
    "pallet-transaction-payment/try-runtime",
    "sp-runtime/try-runtime",
]
