[package]
name = "pallet-template"
description = "BitNice 区块链模板 Pallet"
authors.workspace = true
version = "0.1.0"
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

# Polkadot SDK
polkadot-sdk = { workspace = true, features = [
    "pallet-balances",
    "frame-benchmarking", 
    "frame-support",
    "frame-system",
    "sp-runtime",
]}

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "polkadot-sdk/std",
    "scale-info/std",
]

runtime-benchmarks = [
    "polkadot-sdk/runtime-benchmarks",
]

try-runtime = [
    "polkadot-sdk/try-runtime",
] 